# swiftcut

./: .gitattributes  .gitignore  .prettierignore  CLAUDE.md  README.md  commitlint.config.js  nx.json  oxfmt.config.ts  package.json  pnpm-lock.yaml  turbo.json
.claude/: settings.json
.claude/agents/: code-reviewer.md  database-expert.md
.claude/rules/: database.md  frontend.md  rust.md  testing.md
.claude/skills/commit/: SKILL.md
.claude/skills/new-task/: SKILL.md
.claude/skills/setup-project/: SKILL.md
.github/: dependabot.yml
.github/actions/setup/: action.yml
.github/workflows/: build.yml  commitlint.yml  deploy-supabase.yml  format.yml  generate-types.yml  lint.yml  rust.yml  typecheck.yml
.husky/: commit-msg
apps/desktop/: .env  .env.development  .env.local.example  CLAUDE.md  index.html  package.json  tsconfig.app.json  tsconfig.json  vite.config.ts  vitest.config.ts
apps/desktop/src-frontend/: env.ts  main.tsx
apps/desktop/src-frontend/routes/: index.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/web/: .env  .env.development  CLAUDE.md  components.json  oxlint.config.ts  package.json  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
apps/web/src/: env.ts
apps/web/src/auth/: hooks.ts  mutations.ts  queries.ts  schemas.ts
scripts/: setup.sh
supabase/: config.toml
supabase/functions/: deno.json
supabase/functions/_shared/: auth.ts  env.ts  http.ts  supabase.ts
supabase/functions/hello/: index.ts  router.ts
(+15 files in other folders)
