[package]
name = "swiftcut"
version = "0.1.0"
description = "SwiftCut — a lightweight, local-first video editor"
authors = ["Christian"]
license = ""
repository = "https://github.com/chrille0313/swiftcut"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix avoids a name collision with the binary target on Windows.
name = "swiftcut_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3" }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.3" }
tauri-plugin-log = "2"
